# myget

./: Cargo.toml  LICENSE  README.md
src/: bar.rs  get.rs  main.rs
