[package]
name = "myget"
version = "0.1.0"
edition = "2021"
description = "simple wget clone in rust"
author = "Philip Leake"
repository = "https://github.com/philipleake/rget"
homepage = "https://github.com/philipleake/rget"
documentation = "https://github.com/philipleake/rget"
readme = "README.md"
license = "MIT"
keywords = ["http", "client", "cli", "file", "download"]
categories = ["web-programming::http-client", "command-line-utilities", "network-programming"]

[dependencies]
clap = "4.5.21"
console = "0.15.8"
indicatif = "0.17.9"
reqwest = {version = "0.12.9", features = ["blocking"]}
url = "2.5.3"
futures-util = "0.3.31"
tokio = { version = "1", features = ["full"] }
